--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(':libcommon')
-
+   //启动方法耗时
+    implementation 'org.aspectj:aspectjrt:1.8.13'
 }
